# filters-django

./: .gitignore  .travis.yml  AGENTS.md  README.rst  pyproject.toml  setup.py  tox.ini
.agents/skills/release/: SKILL.md
.agents/skills/writing-adrs/: SKILL.md
.github/workflows/: build.yml
filters_django/: __init__.py
src/filters_django/: __init__.py
test/: filters_django_test.py  models.py  requirements.txt  settings.py
test/app/: apps.py  models.py  test_filters_django.py  test_model.py
