# :see: https://peps.python.org/pep-0621/

[project]
name = "phx-filters-django"
version = "3.0.1"
description = "Extends phx-filters, adding filters useful for Django applications."
readme = "README.rst"
requires-python = ">= 3.9"
license = { file = "LICENCE.txt" }
authors = [
    { email = "Phoenix Zerin <phx@phx.nz>" }
]

keywords = [
    "data validation",
    "django",
    "filters",
    "extension filters",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    'Topic :: Text Processing :: Filters',
]

dependencies = [
    'phx-filters >= 3.0',
    'Django >= 4.0'
]

# https://filters.readthedocs.io/en/latest/extensions.html#registering-your-filters
[project.entry-points."filters.extensions"]
Model = "filters_django:Model"

[project.optional-dependencies]
# Utilities for Project Maintainers
"build-system" = ["build", "twine"]
"test-runner" = ["tox"]

[project.urls]
Documentation = "https://filters.readthedocs.io/en/latest/extension_filters.html#django-filters"
Changelog = "https://github.com/todofixthis/filters-django/releases"
Issues = "https://github.com/todofixthis/filters-django/issues"
Repository = "https://github.com/todofixthis/filters-django"
