# :see: https://peps.python.org/pep-0621/

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
    "autohooks>=26,<27",
    "autohooks-plugin-black>=23,<24",
    "autohooks-plugin-ruff>=25,<26",
    "black>=26,<27",
    "pytest>=9,<10",
    "pytest-django>=4,<5",
    "pyyaml>=6.0.3",
    "tox>=4,<5",
]

[project]
name = "phx-filters-django"
version = "3.2.0"
description = "Extends phx-filters, adding filters useful for Django applications."
readme = "README.rst"
requires-python = ">= 3.12"
license = { file = "LICENCE.txt" }
authors = [
    { name = "Phoenix Zerin", email = "phx@phx.nz" }
]

keywords = [
    "data validation",
    "django",
    "filters",
    "extension filters",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    'Topic :: Text Processing :: Filters',
]

dependencies = [
    'phx-filters >= 3.4.0',
    'Django >= 4.2'
]

# https://filters.readthedocs.io/en/latest/extensions.html#registering-your-filters
[project.entry-points."filters.extensions"]
Model = "filters_django:Model"

[project.urls]
Documentation = "https://filters.readthedocs.io/en/latest/extension_filters.html#django-filters"
Changelog = "https://github.com/todofixthis/filters-django/releases"
Issues = "https://github.com/todofixthis/filters-django/issues"
Repository = "https://github.com/todofixthis/filters-django"

[tool.autohooks]
mode = "pythonpath"
pre-commit = [
    "adr_index",
    "autohooks.plugins.black",
    "autohooks.plugins.ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/filters_django"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test.settings"
pythonpath = ["."]
testpaths = ["test"]

[tool.tox]
env_list = ["py312", "py313", "py314"]

[tool.tox.env_run_base]
allowlist_externals = ["pytest"]
commands = [["pytest"]]

[tool.uv]
keyring-provider = "subprocess"
